- Implemented TF Wrapper - Squad TF and PyT analysis implemented - Sanity TF and PyT analysis implemented - Organized Files and file structure - Pyt requires python 3.6 but tf requires py 3.5+

--- a/squad/sandbox_notebooks/2_Generate_Vectorized_Pairwise_Cosine_Similarity_Matrix_For_Q_P.ipynb
+++ b/squad/sandbox_notebooks/2_Generate_Vectorized_Pairwise_Cosine_Similarity_Matrix_For_Q_P.ipynb
@@ -169,6 +169,7 @@
     "                                             'Calculated Top 1 Most Similar Paragraph', \n",
     "                                             'Similarity Score for Most Similar Paragraph'\n",
     "                                            ])\n",
+    "\n",
     "df_results.to_csv(cos_similarity_results_file_name.format(dataset_type, norm_type), index=False)\n",
     "ax = df_results['Order Index of Actual_Paragraph_Id in Similarities List'].hist()\n",
     "fig = ax.get_figure()\n",
@@ -190,7 +191,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sk_sim[124]"
+    "df_results = pd.read_csv('/home/jackalhan/Development/github/more_meaningful_representations/squad/dev/dev_neighbors.csv')\n",
+    "ax = df_results['actual_paragraph_order'].hist()\n",
+    "fig = ax.get_figure()\n",
+    "fig.savefig('/home/jackalhan/Development/github/more_meaningful_representations/squad/dev/dev_neighbors_hist.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results_filtered=df_results.drop_duplicates(['question'])\n",
+    "df_results_filtered.to_csv('/home/jackalhan/Development/github/more_meaningful_representations/squad/dev/dev_neighbors_removed_duplicates_q.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = df_results_filtered['actual_paragraph_order'].hist()\n",
+    "fig = ax.get_figure()\n",
+    "fig.savefig('/home/jackalhan/Development/github/more_meaningful_representations/squad/dev/dev_neighbors_removed_duplicates_q_hist.png')"
    ]
   }
  ],
