--- a/squad/ELMO_Sanity_Check_with_PyTorch.ipynb
+++ b/squad/ELMO_Sanity_Check_with_PyTorch.ipynb
@@ -20,7 +20,12 @@
     "from tqdm import tqdm_notebook\n",
     "import numpy as np\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "import spacy\n",
+    "nlp = spacy.blank(\"en\")\n",
+    "def word_tokenize(sent):\n",
+    "    doc = nlp(sent)\n",
+    "    return [token.text for token in doc]"
    ]
   },
   {
@@ -64,7 +69,8 @@
    "source": [
     "with open(input_file) as f:\n",
     "    contents = f.readlines()\n",
-    "contents = [[content.strip()] for content in contents]\n",
+    "#contents = [[content.strip()] for content in contents]\n",
+    "contents = [word_tokenize(content.strip()) for content in contents]\n",
     "ee = ElmoEmbedder(options_file, weight_file)\n",
     "embeddings = np.asarray(ee.embed_batch(contents))\n",
     "slices = [{'slice_type':'All', 'slice_index':None, 'axis':(1,2)},\n",
@@ -84,7 +90,7 @@
     "        sk_sim = cosine_similarity(_embedding,embeddings_)[0]\n",
     "        neighbors = np.argsort(-sk_sim)\n",
     "        for _, neighbor_id in enumerate(neighbors[0:5]):\n",
-    "            neighbor_list.append((_s['slice_type'], contents[_id][0], contents[neighbor_id][0],_+1, sk_sim[neighbor_id]))\n",
+    "            neighbor_list.append((_s['slice_type'], \" \".join(contents[_id]), \" \".join(contents[neighbor_id]),_+1, sk_sim[neighbor_id]))\n",
     "df_neighbors = pd.DataFrame(data=neighbor_list, columns=['slice_type','word', 'neighbor_word', 'neighbor_order', 'cos_similarity'])\n",
     "df_neighbors.to_csv(neighbor_words, index=False)\n",
     "print('Completed')"
@@ -107,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
