--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,22 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['COOL_model_3_layers_1_epoch_100_mar_1_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_no_seed_66_loss_v4',\n",
-       " 'IMPORTANT_model_2_layers_2_epoch_20_mar_0_sf_0.1_0.1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v4',\n",
-       " 'model_3_layers_1_epoch_10_mar_1_sf_0.2_wd_0.001_lr_0.001_dim_1024_keep_1_seed_66_loss_v4',\n",
-       " 'IMPORTANT_model_2_layers_2_epoch_40_mar_1_sf_0.1_0.1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v4',\n",
+       "['IMPORTANT_model_2_layers_2_epoch_20_mar_0_sf_0.1_0.1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v4',\n",
        " 'MOST_IMPORTANT_model_2_layers_2_epoch_40_mar_1_sf_0.1_0.1_wd_0.001_0.001_lr_0.001_dim_1024_1024_keep_1_1_seed_66_66_loss_v4',\n",
        " 'IMPORTANT_model_2_layers_2_epoch_20_mar_0_sf_0.1_0.1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v3',\n",
-       " 'model_3_layers_1_epoch_10_mar_1_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_1_seed_66_loss_v4']"
+       " 'COOL_model_3_layers_1_epoch_100_mar_1_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_no_seed_66_loss_v4',\n",
+       " 'model_3_layers_1_epoch_10_mar_1_sf_0.2_wd_1e-06_lr_0.001_dim_1024_keep_1_seed_66_loss_v4',\n",
+       " 'IMPORTANT_model_2_layers_2_epoch_40_mar_1_sf_0.1_0.1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v4',\n",
+       " 'model_3_layers_1_epoch_3_mar_1_sf_0.2_wd_0.0001_lr_0.001_dim_1024_keep_1_seed_66_loss_v4']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,11 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name ='model_3_layers_1_epoch_10_mar_1_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_1_seed_66_loss_v4'\n",
+    "model_name ='model_3_layers_1_epoch_10_mar_1_sf_0.2_wd_1e-06_lr_0.001_dim_1024_keep_1_seed_66_loss_v4'\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_name]))\n",
     "num_of_epochs = my_dict['epochs']\n",
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -118,16 +126,16 @@
          ],
          "y": [
           0.3372,
-          0.3396,
-          0.341,
-          0.331,
-          0.3146,
+          0.3266,
+          0.3064,
+          0.312,
+          0.3082,
+          0.3048,
+          0.307,
+          0.3202,
+          0.3078,
           0.299,
-          0.2832,
-          0.272,
-          0.259,
-          0.2494,
-          0.2324
+          0.302
          ]
         },
         {
@@ -149,16 +157,16 @@
          ],
          "y": [
           0.4204,
-          0.4238,
-          0.429,
-          0.4178,
-          0.3944,
-          0.3838,
-          0.357,
-          0.3476,
-          0.3332,
-          0.3166,
-          0.3042
+          0.4142,
+          0.3884,
+          0.397,
+          0.3928,
+          0.3894,
+          0.391,
+          0.406,
+          0.3906,
+          0.3896,
+          0.3872
          ]
         },
         {
@@ -180,16 +188,16 @@
          ],
          "y": [
           0.5266,
-          0.5308,
-          0.541,
-          0.5308,
-          0.5046,
+          0.5264,
+          0.4944,
+          0.4974,
+          0.496,
           0.4858,
-          0.4652,
-          0.4554,
-          0.4346,
-          0.4196,
-          0.4038
+          0.489,
+          0.5104,
+          0.4932,
+          0.4852,
+          0.4866
          ]
         },
         {
@@ -211,16 +219,16 @@
          ],
          "y": [
           0.597,
-          0.6068,
-          0.6132,
-          0.606,
-          0.5846,
-          0.564,
-          0.5432,
-          0.5324,
-          0.5124,
-          0.5004,
-          0.4788
+          0.596,
+          0.5704,
+          0.575,
+          0.5724,
+          0.5642,
+          0.5654,
+          0.5884,
+          0.57,
+          0.5628,
+          0.5648
          ]
         },
         {
@@ -242,16 +250,16 @@
          ],
          "y": [
           0.6724,
-          0.6802,
-          0.6846,
-          0.6774,
-          0.6558,
-          0.6378,
-          0.6152,
-          0.6024,
-          0.5862,
-          0.5744,
-          0.5554
+          0.6704,
+          0.6442,
+          0.649,
+          0.6436,
+          0.6362,
+          0.637,
+          0.6628,
+          0.6486,
+          0.6372,
+          0.6424
          ]
         },
         {
@@ -273,16 +281,16 @@
          ],
          "y": [
           0.759,
-          0.765,
-          0.7706,
-          0.7618,
-          0.7432,
-          0.73,
-          0.707,
-          0.695,
-          0.6844,
-          0.6698,
-          0.6536
+          0.7546,
+          0.732,
+          0.7396,
+          0.7356,
+          0.7284,
+          0.727,
+          0.7482,
+          0.7378,
+          0.7256,
+          0.7318
          ]
         }
        ],
@@ -297,10 +305,10 @@
        }
       },
       "text/html": [
-       "<div id=\"f3184dfb-fc65-4338-96ad-93a4efe006ed\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f3184dfb-fc65-4338-96ad-93a4efe006ed\", [{\"name\": \"Top top_1\", \"y\": [0.3372, 0.3396, 0.341, 0.331, 0.3146, 0.299, 0.2832, 0.272, 0.259, 0.2494, 0.2324], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_2\", \"y\": [0.4204, 0.4238, 0.429, 0.4178, 0.3944, 0.3838, 0.357, 0.3476, 0.3332, 0.3166, 0.3042], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_5\", \"y\": [0.5266, 0.5308, 0.541, 0.5308, 0.5046, 0.4858, 0.4652, 0.4554, 0.4346, 0.4196, 0.4038], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_10\", \"y\": [0.597, 0.6068, 0.6132, 0.606, 0.5846, 0.564, 0.5432, 0.5324, 0.5124, 0.5004, 0.4788], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_20\", \"y\": [0.6724, 0.6802, 0.6846, 0.6774, 0.6558, 0.6378, 0.6152, 0.6024, 0.5862, 0.5744, 0.5554], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_50\", \"y\": [0.759, 0.765, 0.7706, 0.7618, 0.7432, 0.73, 0.707, 0.695, 0.6844, 0.6698, 0.6536], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}], {\"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"yaxis\": {\"title\": \"Recall Values\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"e5ef89f6-a96a-451b-9130-4bce3cb96980\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e5ef89f6-a96a-451b-9130-4bce3cb96980\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_1\", \"y\": [0.3372, 0.3266, 0.3064, 0.312, 0.3082, 0.3048, 0.307, 0.3202, 0.3078, 0.299, 0.302], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_2\", \"y\": [0.4204, 0.4142, 0.3884, 0.397, 0.3928, 0.3894, 0.391, 0.406, 0.3906, 0.3896, 0.3872], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_5\", \"y\": [0.5266, 0.5264, 0.4944, 0.4974, 0.496, 0.4858, 0.489, 0.5104, 0.4932, 0.4852, 0.4866], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_10\", \"y\": [0.597, 0.596, 0.5704, 0.575, 0.5724, 0.5642, 0.5654, 0.5884, 0.57, 0.5628, 0.5648], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_20\", \"y\": [0.6724, 0.6704, 0.6442, 0.649, 0.6436, 0.6362, 0.637, 0.6628, 0.6486, 0.6372, 0.6424], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_50\", \"y\": [0.759, 0.7546, 0.732, 0.7396, 0.7356, 0.7284, 0.727, 0.7482, 0.7378, 0.7256, 0.7318], \"mode\": \"lines+markers\"}], {\"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}, \"yaxis\": {\"title\": \"Recall Values\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f3184dfb-fc65-4338-96ad-93a4efe006ed\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f3184dfb-fc65-4338-96ad-93a4efe006ed\", [{\"name\": \"Top top_1\", \"y\": [0.3372, 0.3396, 0.341, 0.331, 0.3146, 0.299, 0.2832, 0.272, 0.259, 0.2494, 0.2324], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_2\", \"y\": [0.4204, 0.4238, 0.429, 0.4178, 0.3944, 0.3838, 0.357, 0.3476, 0.3332, 0.3166, 0.3042], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_5\", \"y\": [0.5266, 0.5308, 0.541, 0.5308, 0.5046, 0.4858, 0.4652, 0.4554, 0.4346, 0.4196, 0.4038], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_10\", \"y\": [0.597, 0.6068, 0.6132, 0.606, 0.5846, 0.564, 0.5432, 0.5324, 0.5124, 0.5004, 0.4788], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_20\", \"y\": [0.6724, 0.6802, 0.6846, 0.6774, 0.6558, 0.6378, 0.6152, 0.6024, 0.5862, 0.5744, 0.5554], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}, {\"name\": \"Top top_50\", \"y\": [0.759, 0.765, 0.7706, 0.7618, 0.7432, 0.73, 0.707, 0.695, 0.6844, 0.6698, 0.6536], \"mode\": \"lines+markers\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\"}], {\"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"yaxis\": {\"title\": \"Recall Values\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"e5ef89f6-a96a-451b-9130-4bce3cb96980\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e5ef89f6-a96a-451b-9130-4bce3cb96980\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_1\", \"y\": [0.3372, 0.3266, 0.3064, 0.312, 0.3082, 0.3048, 0.307, 0.3202, 0.3078, 0.299, 0.302], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_2\", \"y\": [0.4204, 0.4142, 0.3884, 0.397, 0.3928, 0.3894, 0.391, 0.406, 0.3906, 0.3896, 0.3872], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_5\", \"y\": [0.5266, 0.5264, 0.4944, 0.4974, 0.496, 0.4858, 0.489, 0.5104, 0.4932, 0.4852, 0.4866], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_10\", \"y\": [0.597, 0.596, 0.5704, 0.575, 0.5724, 0.5642, 0.5654, 0.5884, 0.57, 0.5628, 0.5648], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_20\", \"y\": [0.6724, 0.6704, 0.6442, 0.649, 0.6436, 0.6362, 0.637, 0.6628, 0.6486, 0.6372, 0.6424], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_50\", \"y\": [0.759, 0.7546, 0.732, 0.7396, 0.7356, 0.7284, 0.727, 0.7482, 0.7378, 0.7256, 0.7318], \"mode\": \"lines+markers\"}], {\"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}, \"yaxis\": {\"title\": \"Recall Values\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
