--- a/squad/GLOVE_Embeddings_with_IDF.ipynb
+++ b/squad/GLOVE_Embeddings_with_IDF.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "import os\n",
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +229,7 @@
       "--------------------\n",
       "Paragraphs: Tokenization and Saving Tokenization Started\n",
       "# of Tokenized Paragraphs: 2067\n",
-      "Paragraphs: Tokenization and Saving Tokenization  is Completed in 0.75 minutes\n"
+      "Paragraphs: Tokenization and Saving Tokenization  is Completed in 0.5833333333333334 minutes\n"
      ]
     }
    ],
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +257,7 @@
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started\n",
       "# of Tokenized Questions: 10570\n",
-      "Questions: Tokenization and Saving Tokenization  is Completed in 0.2833333333333333 minutes\n"
+      "Questions: Tokenization and Saving Tokenization  is Completed in 0.25 minutes\n"
      ]
     }
    ],
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +298,220 @@
     "token2idfweight = defaultdict(\n",
     "    lambda: max_idf,\n",
     "    [(w, tfidf.idf_[i]) for w, i in tfidf.vocabulary_.items()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Which',\n",
+       " 'NFL',\n",
+       " 'team',\n",
+       " 'represented',\n",
+       " 'the',\n",
+       " 'AFC',\n",
+       " 'at',\n",
+       " 'Super',\n",
+       " 'Bowl',\n",
+       " '50',\n",
+       " '?']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenized_questions[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 11, 300)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc1= np.array([np.array([glove_word_weights[w] for w in words if w in glove_word_weights]\n",
+    "                                or [np.zeros(dim)])\n",
+    "                                for words in [tokenized_questions[0]]\n",
+    "                                ])\n",
+    "doc1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.0087887, -0.016835 ,  0.012973 , ..., -0.20378  ,\n",
+       "          0.30843  ,  0.050497 ],\n",
+       "        [ 0.026617 ,  0.37059  , -0.22443  , ...,  0.56216  ,\n",
+       "          0.251    ,  0.029581 ],\n",
+       "        [-0.15062  ,  0.19176  ,  0.12533  , ..., -0.2263   ,\n",
+       "         -0.013063 , -0.42834  ],\n",
+       "        ...,\n",
+       "        [-0.26901  ,  0.63352  ,  0.36472  , ...,  0.43628  ,\n",
+       "          0.5312   , -0.30365  ],\n",
+       "        [-0.0042845,  0.67675  ,  0.38324  , ..., -0.25564  ,\n",
+       "          0.036364 , -0.18558  ],\n",
+       "        [-0.086864 ,  0.19161  ,  0.10915  , ..., -0.01516  ,\n",
+       "          0.11108  ,  0.2065   ]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 11, 300)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc1_idf = np.array([np.array([glove_word_weights[w] * token2idfweight[w] for w in words if w in glove_word_weights]\n",
+    "                                or [np.zeros(dim)])\n",
+    "                                for words in [tokenized_questions[0]]\n",
+    "                                ])\n",
+    "doc1_idf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.10541913, -0.20193328,  0.15560918, ..., -2.4443102 ,\n",
+       "          3.699571  ,  0.60570383],\n",
+       "        [ 0.3192669 ,  4.445171  , -2.6920037 , ...,  6.743024  ,\n",
+       "          3.0107067 ,  0.3548196 ],\n",
+       "        [-1.806664  ,  2.300132  ,  1.5033144 , ..., -2.7144341 ,\n",
+       "         -0.1566887 , -5.137873  ],\n",
+       "        ...,\n",
+       "        [-3.2267342 ,  7.598976  ,  4.374761  , ...,  5.2331123 ,\n",
+       "          6.371663  , -3.6422355 ],\n",
+       "        [-0.05139193,  8.117514  ,  4.5969057 , ..., -3.066363  ,\n",
+       "          0.43618065, -2.226004  ],\n",
+       "        [-0.10448729,  0.23048452,  0.13129474, ..., -0.01823572,\n",
+       "          0.13361631,  0.24839546]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc1_idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.corpora import Dictionary\n",
+    "from gensim.models.tfidfmodel import TfidfModel\n",
+    "from gensim.matutils import sparse2full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_dict = Dictionary(tokenized_questions+tokenized_paragraphs+tokenized_test_paragraphs+tokenized_test_questions)\n",
+    "docs_dict.compactify()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_corpus = [docs_dict.doc2bow(doc) for doc in  tokenized_questions + tokenized_paragraphs]\n",
+    "model_tfidf = TfidfModel(docs_corpus, id2word=docs_dict)\n",
+    "docs_tfidf  = model_tfidf[docs_corpus]\n",
+    "docs_vecs   = np.vstack([sparse2full(c, len(docs_dict)) for c in docs_tfidf])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp  = spacy.load('en_core_web_md')\n",
+    "tfidf_emb_vecs = np.vstack([nlp(docs_dict[i]).vector for i in range(len(docs_dict))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_emb = np.dot(docs_vecs, tfidf_emb_vecs) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(12637, 0), dtype=float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs_emb"
    ]
   },
   {
