- label and paragraph problem are fixed for CNN

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -53,18 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_3_epoch_2_mar_0.6_sf_0.1_0.1_0.1_wd_0.001_0.001_0.001_lr_0.001_dim_2048_2048_2048_keep_1_1_1_seed_66_66_66_loss_v3/debug_dict.pkl',\n",
-       " '3 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_10_2048_no_shuffle/debug_dict.pkl',\n",
+       " '3 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_5_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_1_seed_66_loss_v3/debug_dict.pkl',\n",
+       " '4 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_10_2048_no_shuffle/debug_dict.pkl',\n",
        " '6 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_1_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_1_seed_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,22 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_1_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_1_seed_66_loss_v3/debug_dict.pkl'"
+       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_5_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_1024_keep_1_seed_66_loss_v3/debug_dict.pkl'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_indx =6\n",
+    "model_indx =3\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']\n",
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -122,11 +123,19 @@
          "type": "scatter",
          "x": [
           0,
-          1
+          1,
+          2,
+          3,
+          4,
+          5
          ],
          "y": [
           0.447594278283485,
-          0.4540962288686606
+          0.4540962288686606,
+          0.4517555266579974,
+          0.4507152145643693,
+          0.45019505851755526,
+          0.4507152145643693
          ]
         },
         {
@@ -135,11 +144,19 @@
          "type": "scatter",
          "x": [
           0,
-          1
+          1,
+          2,
+          3,
+          4,
+          5
          ],
          "y": [
           0.5622886866059817,
-          0.5628088426527958
+          0.5628088426527958,
+          0.5643693107932379,
+          0.5638491547464239,
+          0.5633289986996098,
+          0.563589076723017
          ]
         },
         {
@@ -148,11 +165,19 @@
          "type": "scatter",
          "x": [
           0,
-          1
+          1,
+          2,
+          3,
+          4,
+          5
          ],
          "y": [
           0.6829648894668401,
-          0.6897269180754226
+          0.6897269180754226,
+          0.6881664499349804,
+          0.6866059817945384,
+          0.6858257477243173,
+          0.6863459037711314
          ]
         },
         {
@@ -161,11 +186,19 @@
          "type": "scatter",
          "x": [
           0,
-          1
+          1,
+          2,
+          3,
+          4,
+          5
          ],
          "y": [
           0.765149544863459,
-          0.764369310793238
+          0.764369310793238,
+          0.764369310793238,
+          0.764889466840052,
+          0.7661898569570871,
+          0.7669700910273082
          ]
         },
         {
@@ -174,11 +207,19 @@
          "type": "scatter",
          "x": [
           0,
-          1
+          1,
+          2,
+          3,
+          4,
+          5
          ],
          "y": [
           0.8319895968790637,
-          0.8358907672301691
+          0.8358907672301691,
+          0.8358907672301691,
+          0.834850455136541,
+          0.834850455136541,
+          0.835630689206762
          ]
         },
         {
@@ -187,11 +228,19 @@
          "type": "scatter",
          "x": [
           0,
-          1
+          1,
+          2,
+          3,
+          4,
+          5
          ],
          "y": [
           0.8925877763328999,
-          0.893888166449935
+          0.893888166449935,
+          0.893628088426528,
+          0.893368010403121,
+          0.893368010403121,
+          0.893368010403121
          ]
         }
        ],
@@ -206,10 +255,10 @@
        }
       },
       "text/html": [
-       "<div id=\"4ef8491a-1f04-40e5-98a6-239dfcb6f461\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4ef8491a-1f04-40e5-98a6-239dfcb6f461\", [{\"mode\": \"lines+markers\", \"name\": \"Top top_1\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.447594278283485, 0.4540962288686606]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_2\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.5622886866059817, 0.5628088426527958]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_5\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.6829648894668401, 0.6897269180754226]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_10\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.765149544863459, 0.764369310793238]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_20\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.8319895968790637, 0.8358907672301691]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_50\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.8925877763328999, 0.893888166449935]}], {\"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"yaxis\": {\"title\": \"Recall Values\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"c126fbe6-30b0-479c-a73f-988aace4cdc2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c126fbe6-30b0-479c-a73f-988aace4cdc2\", [{\"y\": [0.447594278283485, 0.4540962288686606, 0.4517555266579974, 0.4507152145643693, 0.45019505851755526, 0.4507152145643693], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"y\": [0.5622886866059817, 0.5628088426527958, 0.5643693107932379, 0.5638491547464239, 0.5633289986996098, 0.563589076723017], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"y\": [0.6829648894668401, 0.6897269180754226, 0.6881664499349804, 0.6866059817945384, 0.6858257477243173, 0.6863459037711314], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"y\": [0.765149544863459, 0.764369310793238, 0.764369310793238, 0.764889466840052, 0.7661898569570871, 0.7669700910273082], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"y\": [0.8319895968790637, 0.8358907672301691, 0.8358907672301691, 0.834850455136541, 0.834850455136541, 0.835630689206762], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"y\": [0.8925877763328999, 0.893888166449935, 0.893628088426528, 0.893368010403121, 0.893368010403121, 0.893368010403121], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"4ef8491a-1f04-40e5-98a6-239dfcb6f461\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4ef8491a-1f04-40e5-98a6-239dfcb6f461\", [{\"mode\": \"lines+markers\", \"name\": \"Top top_1\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.447594278283485, 0.4540962288686606]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_2\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.5622886866059817, 0.5628088426527958]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_5\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.6829648894668401, 0.6897269180754226]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_10\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.765149544863459, 0.764369310793238]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_20\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.8319895968790637, 0.8358907672301691]}, {\"mode\": \"lines+markers\", \"name\": \"Top top_50\", \"type\": \"scatter\", \"x\": [0, 1], \"y\": [0.8925877763328999, 0.893888166449935]}], {\"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"yaxis\": {\"title\": \"Recall Values\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"c126fbe6-30b0-479c-a73f-988aace4cdc2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c126fbe6-30b0-479c-a73f-988aace4cdc2\", [{\"y\": [0.447594278283485, 0.4540962288686606, 0.4517555266579974, 0.4507152145643693, 0.45019505851755526, 0.4507152145643693], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"y\": [0.5622886866059817, 0.5628088426527958, 0.5643693107932379, 0.5638491547464239, 0.5633289986996098, 0.563589076723017], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"y\": [0.6829648894668401, 0.6897269180754226, 0.6881664499349804, 0.6866059817945384, 0.6858257477243173, 0.6863459037711314], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"y\": [0.765149544863459, 0.764369310793238, 0.764369310793238, 0.764889466840052, 0.7661898569570871, 0.7669700910273082], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"y\": [0.8319895968790637, 0.8358907672301691, 0.8358907672301691, 0.834850455136541, 0.834850455136541, 0.835630689206762], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"y\": [0.8925877763328999, 0.893888166449935, 0.893628088426528, 0.893368010403121, 0.893368010403121, 0.893368010403121], \"x\": [0, 1, 2, 3, 4, 5], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
       ]
      },
      "metadata": {},
@@ -257,18 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "1    0.700130\n",
+       "2    0.699697\n",
+       "5    0.699436\n",
+       "3    0.699046\n",
+       "4    0.698960\n",
        "0    0.697096\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,6 +377,46 @@
        "      <td>0.893888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.451756</td>\n",
+       "      <td>0.564369</td>\n",
+       "      <td>0.688166</td>\n",
+       "      <td>0.764369</td>\n",
+       "      <td>0.835891</td>\n",
+       "      <td>0.893628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.450715</td>\n",
+       "      <td>0.563849</td>\n",
+       "      <td>0.686606</td>\n",
+       "      <td>0.764889</td>\n",
+       "      <td>0.834850</td>\n",
+       "      <td>0.893368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.450715</td>\n",
+       "      <td>0.563589</td>\n",
+       "      <td>0.686346</td>\n",
+       "      <td>0.766970</td>\n",
+       "      <td>0.835631</td>\n",
+       "      <td>0.893368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.450195</td>\n",
+       "      <td>0.563329</td>\n",
+       "      <td>0.685826</td>\n",
+       "      <td>0.766190</td>\n",
+       "      <td>0.834850</td>\n",
+       "      <td>0.893368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0.447594</td>\n",
@@ -340,10 +433,14 @@
       "text/plain": [
        "   epoch     top_1     top_2     top_5    top_10    top_20    top_50\n",
        "1      1  0.454096  0.562809  0.689727  0.764369  0.835891  0.893888\n",
+       "2      2  0.451756  0.564369  0.688166  0.764369  0.835891  0.893628\n",
+       "3      3  0.450715  0.563849  0.686606  0.764889  0.834850  0.893368\n",
+       "5      5  0.450715  0.563589  0.686346  0.766970  0.835631  0.893368\n",
+       "4      4  0.450195  0.563329  0.685826  0.766190  0.834850  0.893368\n",
        "0      0  0.447594  0.562289  0.682965  0.765150  0.831990  0.892588"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
